--- a/Project/appsettings.json
+++ b/Project/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "ProjectDbConnection": "Data Source=DESKTOP-K9G0PMK; Initial Catalog = ProjectAPI; Integrated Security=True;Trust Server Certificate=True"
+  }
 }
