--- a/Project/appsettings.json
+++ b/Project/appsettings.json
@@ -7,6 +7,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "ProjectDbConnection": "Data Source=DESKTOP-K9G0PMK; Initial Catalog = ProjectAPI; Integrated Security=True;Trust Server Certificate=True"
+    "ProjectDbConnection": "Data Source=DESKTOP-K9G0PMK; Initial Catalog = Project3-API; Integrated Security=True;Trust Server Certificate=True"
   }
 }
